# galaxian-starfield-starter-kit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: arcade-accurate.md  starfield-api.md  tutorial.md
src/starfield_kit/: __init__.py  demo.py  starfield.py
src/starfield_kit/asteroids/: __init__.py  main.py
src/starfield_kit/defender/: __init__.py  entities.py  main.py  settings.py  sprites.py
src/starfield_kit/galaxians/: __init__.py  attract.py  entities.py  main.py  settings.py  sprites.py
src/starfield_kit/invaders/: __init__.py  main.py
src/starfield_kit/lander/: __init__.py  main.py
src/starfield_kit/missiles/: __init__.py  main.py
src/starfield_kit/retro/: __init__.py  particles.py  pixelart.py  sfx.py  ui.py
src/starfield_kit/skyraid/: __init__.py  main.py
tests/: conftest.py  test_games_and_helpers.py  test_starfield.py
